# ext-cardano-ogmios

.github/workflows/: build.yml  controller.yml
bootstrap/: main.tf  variables.tf
bootstrap/configs/: main.tf
bootstrap/configs/prime-testnet/: config.json
bootstrap/configs/vector-testnet/: alonzo.json  byron.json  config.json  conway.json  shelley.json
bootstrap/crds/: main.tf
bootstrap/feature/: main.tf  namespace.tf  operator.tf
bootstrap/feature/operator/: main.tf
bootstrap/instance/: main.tf  ogmios.tf
bootstrap/monitoring/: main.tf
bootstrap/proxy/: cert.tf  config.tf  deployment.tf  main.tf  service.tf
bootstrap/service/: service.tf
docker/: dockerfile.operator  dockerfile.proxy
docker/ogmios-6/: Dockerfile
examples/: manifest.yaml
operator/: Cargo.toml  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
operator/src/handlers/: auth.rs  gateway.rs
operator/src/helpers/: mod.rs
proxy/: Cargo.toml  Dockerfile
proxy/examples/: README.md  docker-compose.yml  manifest.yaml  proxy.toml  setup
proxy/src/: auth.rs  config.rs  health.rs  limiter.rs  main.rs  metrics.rs  proxy.rs  utils.rs
proxy/src/plugins/: auth_dmtr.rs  host_key_header.rs  mod.rs  rate_limit.rs
