[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
config = { version = "0.14.0", features = ["toml"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
leaky-bucket = "1.0.1"
prometheus = "0.13.3"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
